--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Mini-vue",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+    "name": "MiniVue",
+    "version": "1.0.0",
+    "main": "index.js",
+    "license": "MIT"
 }
